--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,18 +10,20 @@
                 <h1></h1>
                 <nav>
                     <ul>
-                        <li>Discos de Vinil</li>
-                        <li>Acessorios</li>
-                        <li>Matérias</li>
-                        <li>Quem somos?</li>
-                        <li>Fazer login</li>
+                        <a class="BotoesMenu" href="index.html"><li>Discos de Vinil</li></a>
+                        <a class="BotoesMenu" href="Acessorios.html"><li>Acessorios</li></a>
+                        <a class="BotoesMenu" href="Materias.html"><li>Matérias</li></a>
+                        <a class="BotoesMenu" href="Quemsomos.html"><li>Quem somos?</li></a>
+                        <a class="BotoesMenu" href="Cadastro.html"><li>Cadastro</li></a>
+                        <a class="BotoesMenu" href="Login.html"><li>Fazer login</li></a>
                         
                     </ul>
 
                 </nav>
             </header>
+
             
-            <section is="Descriao" >
+            <section id="Descricao" >
                 <aside>
                     <p>
                         Bem-vindo à Discolândia, onde a música ganha vida e a nostalgia se transforma em uma experiência tangível.<br>
@@ -48,8 +50,8 @@
                 </article>
 
                 <article class="gl3">
-                    <h3>beatles<br>
-                    Sgt pepper´s</h3>
+                    <h3>Beatles<br>
+                    Sgt Pepper´s</h3>
                     <img class="imgFmt" src="../IMAGENS/beatles.jpg" alt="Imagem beatles">
                     <p class="preco">499,10</p>
                     <a href="">Comprar</a><!--HiperLink-->
